--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -8,4 +8,4 @@
 @import './helpers/util';
 @import './components/nav';
 @import './layout/footer';
-@import './layout/index';
+@import './pages/index';
