--- a/app/assets/style/helpers/_base.scss
+++ b/app/assets/style/helpers/_base.scss
@@ -1,9 +1,8 @@
-$font-lato: 'Lato', sans-serif;
 $font-title: 'Merriweather', serif;
 
 body{
-  font-family: $font-lato;
   color: $secondary;
+  overflow-x: hidden;
 }
 
 
