--- a/app/assets/style/pages/_index.scss
+++ b/app/assets/style/pages/_index.scss
@@ -162,6 +162,7 @@
   background: url('https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week7/img4.jpg') no-repeat;
   background-size: cover;
   background-position: center 20%;
+  background-attachment: fixed;
 }
 
 .mottoSaying{
