--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -49,7 +49,7 @@
             <li><a href="javascript:;" class="fw-bold px-4">Blog</a></li>
             <li><a href="javascript:;" class="fw-bold px-4">contact</a></li>
           </ul>
-          <h2 class="fs-10 mb-0 position-absolute top-50 start-50">© 2020 Fixie. All Rights Reserved.</h2>
+          <p class="fs-10 mb-0 position-absolute top-50 start-50">© 2020 Fixie. All Rights Reserved.</p>
           <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week7/logo-fixie.svg" alt="logo"
             class="fotterLogo d-none d-md-inline me-4 my-4">
         </div>
