--- a/app/assets/style/helpers/_base.scss
+++ b/app/assets/style/helpers/_base.scss
@@ -1,5 +1,3 @@
-$font-title: 'Merriweather', serif;
-
 body{
   color: $secondary;
   overflow-x: hidden;
@@ -7,7 +5,7 @@ body{
 
 
 .font-title{
-  font-family: $font-title;
+  font-family: 'Merriweather', serif;
   font-style: italic;
   color: $primary;
 }
