--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&family=Merriweather:ital@1&display=swap');
-@import "../../../node_modules/bootstrap/scss/functions";
+@import "node_modules/bootstrap/scss/functions";
 @import "./helpers/variables";
-@import "../../../node_modules/bootstrap/scss/bootstrap";
+@import "node_modules/bootstrap/scss/bootstrap";
+@import "node_modules/aos/dist/aos";
 
 @import './helpers/base';
 @import './helpers/mixin';
